...
import com.swent.skillswap.ui.utils.AvatarDisplay
import com.swent.skillswap.ui.utils.AvatarVariant
import com.swent.skillswap.ui.utils.ProfileActionButton
import com.swent.skillswap.ui.utils.SkillSwapEditButton

object ProfileTestTags {
    const val PROFILE_TITLE = "profile_title"

    // Profile picture
    const val PROFILE_PICTURE_BOX = "profile_picture_box"
    const val PROFILE_PICTURE_IMAGE = "profile_picture_image"
    const val EDIT_PROFILE_BUTTON = "edit_profile_button"

...
