package com.swent.skillswap.ui.navigation.bottomBar

/**
 * Contains test tags for the [BottomBar] UI components.
 *
 * These tags are used in Compose UI tests to uniquely identify the buttons and container of the
 * bottom navigation bar.
 *
 * @author Joey Gugler Made Using Ai (chatGPT)
 */
object BottomBarTestTag {

    /** Test tag for the Profile button in the bottom bar. */
    const val PROFILE_BUTTON = "PROFILE_BUTTON"

    /** Test tag for the Chat button in the bottom bar. */
    const val CHAT_BUTTON = "CHAT_BUTTON"

    /** Test tag for the Offer Screen button in the bottom bar. */
    const val OFFER_SCREEN_BUTTON = "OFFER_SCREEN_BUTTON"

    /** Test tag for the bottom bar container (Row). */
    const val BOTTOM_BAR = "BOTTOM_BAR"
}
